--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.9.6",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
